--- a/app/front/less/main/index.less
+++ b/app/front/less/main/index.less
@@ -1,3 +1,29 @@
 body{
   background: #ccc;
 }
+
+html, body{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#map{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@color: #CA1667;
+@size: 20px;
+.vid{
+  position: absolute;
+  width: @size;
+  height: @size;
+  top: -@size/2;
+  left: -@size/2;
+  background: fade(@color, 30);
+  border-radius: @size/2;
+}
