--- a/app/front/less/main/index.less
+++ b/app/front/less/main/index.less
@@ -1,3 +1,17 @@
+@keyframes pop {
+  0%{
+    transform: scale(6.5);
+    opacity: 0;
+  }
+  25%{
+    opacity: 1;
+  }
+  100%{
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
 body{
   background: #ccc;
 }
@@ -16,14 +30,34 @@ html, body{
   height: 100%;
 }
 
-@color: #CA1667;
+@color-error: #CA1667;
+@color-normal: #428bca;
 @size: 20px;
-.vid{
+.marker{
   position: absolute;
   width: @size;
   height: @size;
+  //border: 1px solid fade(@color, 40);
   top: -@size/2;
   left: -@size/2;
-  background: fade(@color, 30);
+  background: fade(@color-normal, 30);
   border-radius: @size/2;
+  animation: pop 0.3s 0.1s backwards; 
+  transition: transform 0.1s;
+  .center{
+    position: absolute;
+    width: 2px;
+    height: 2px;
+    background: fade(white, 90);
+    border-radius: 4px;
+    top: (@size/2) - 1px;
+    left: (@size/2) - 1px;
+  }
+  &.delayed{
+    background: fade(@color-error, 30);
+  }
+}
+
+.info{
+  border-spacing: 0;
 }
